--- a/my-portfolio/src/components/header/header.module.css
+++ b/my-portfolio/src/components/header/header.module.css
@@ -2,18 +2,41 @@
   background-color: #060f2e;
   padding: 25px 0;
   border-bottom: 1px solid #551111;
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+}
+
+.headerOne {
+  font-size: 1.8em;
+}
+
+.headerOne, .headerp {
+  margin-left: 50px;
+  color: #EFE5CA;
+}
+
+.headerp {
+  font-style: italic;
 }
 
 .nav {
-  text-align: center;
+  vertical-align:middle;
 }
 
 ol {
   width: auto;
+  margin-right: 50px;
 }
 
 .link {
   font-size: 1.5em;
   margin: 20px;
-  color: #DDD;
+  color: #646464;
+  text-decoration: none;
+  transition: all .1s ease;
+}
+
+.link:hover {
+  color: #ddd;
 }
